

+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

10-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed wrong root refresh on delete and create when objects are in toplevel
		some string changed in prefs dialog
		added option to close document if it is deleted from treebrowser


31-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed saving state of Show the toolbars when starting Geany
		moving settings saving in separated function - save_settings()
		now changing root directory when change current project
		fixed bug when 'Right click->Refresh'


30-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed expaned state when create/delete/remove files or directories


26-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed bug with 'On expand, refresh.'
		now right click not select item from list


23-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		added option when expanding to refresh directory tree
		fixed complier warning with glib


22-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed some bugs
		fixed few old compiler warnings
		applied few patches from Enrico Troger (code improvement)


21-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed few compile warnings with glib and unused vars
		fixed expanding, now directory is open when it click filling for first time
		fixed possible segfault on start
		added menu option to go up
		fixed duplicated vbox varname now is 'sidebar_vbox'
		added configuration dialog
		fixed externally open menu
		added option to close bars in bars
		added options to expand/collapse all from menu
		fixed compile error with glib < 2.12.0
		added option to go current doc path in menu


20-03-2010 	Adrian Dimitrov 	<dimitrov.adrian@gmail.com>
