@@ -26,6 +26,7 @@
 		fixed wrong root refresh on delete and create when objects are in toplevel
 		some string changed in prefs dialog
 		added option to close document if it is deleted from treebrowser
+		highlighing addressbar if typed directory not exists
 
 
 31-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>
